--- a/source/blocks/page-header/page-header.html
+++ b/source/blocks/page-header/page-header.html
@@ -55,28 +55,28 @@
   {%- if not isInnerPage -%}
   <b class="page-header__slogan">В путешествие с крутыми попутчиками!</b>
 
-  <blockquote class="page-header__review review">
-    <p class="review__text">«Лучшее приложение, что я видел в жизни!»</p>
-    <cite class="review__author">Мурат&nbsp;Эльтазин главный редактор газеты «гаджетлайф»</cite>
+  <blockquote class="page-header__review-wrap">
+    <p class="page-header__review-text standard-paragraph standard-paragraph--thin">«Лучшее приложение, что я видел в жизни!»</p>
+    <cite class="page-header__review-author standard-paragraph standard-paragraph--bold">Мурат&nbsp;Эльтазин главный редактор газеты «гаджетлайф»</cite>
   </blockquote>
 
   <ul class="page-header__steps steps">
-    <li class="steps__item">Выберите направление</li>
-    <li class="steps__item">Изучите идеи путешественников</li>
-    <li class="steps__item">Находите тех, кто похож на вас</li>
-    <li class="steps__item">Путешествуйте вместе!</li>
+    <li class="steps__item">Выберите<br>направление</li>
+    <li class="steps__item">Изучите идеи<br>путешественников</li>
+    <li class="steps__item">Находите тех,<br>кто похож на вас</li>
+    <li class="steps__item">Путешествуйте<br>вместе!</li>
   </ul>
 
   <section class="page-header__about-service about-service">
     <h2 class="about-service__heading subheading">О сервисе</h2>
 
-    <p class="about-service__description">
+    <p class="about-service__description standard-paragraph standard-paragraph--thin">
       Любое путешествие веселее
       с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в
       чужих.
     </p>
 
-    <p class="about-service__action">
+    <p class="about-service__action standard-paragraph standard-paragraph--bold">
       А если найдете кого-то
       близкого по духу — скорее
       зовите в совместный трип!
