--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
     <section class="directions page-section">
       <h2 class="directions__heading subheading">Направления</h2>
 
-      <p class="directions__disclaimer">
+      <p class="directions__disclaimer standard-paragraph standard-paragraph--thin">
         Мы не продаем туры
         и ничего не рекламируем.
         Люди сами пишут о странах, куда хотели бы отправиться
@@ -60,12 +60,12 @@
     <section class="companions page-section">
       <h2 class="companoins__heading subheading">Попутчики</h2>
 
-      <p class="companions__description">
+      <p class="companions__description standard-paragraph standard-paragraph--thin">
         Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут
         для хайкинга.
       </p>
 
-      <p class="companions__action">
+      <p class="companions__action standard-paragraph standard-paragraph--bold">
         Теперь можно легко найти единомышленников!
       </p>
       <ul class="companions__list companions-list">
@@ -74,7 +74,7 @@
         {% include "blocks/featured-companion/featured-companion.html" %}
         {% endfor %}
       </ul>
-      <a href="#" class="companions__show-all button">Показать всех</a>
+      <a href="#" class="companions__show-all button button--big">Показать всех</a>
     </section>
 
     <section class="tariffs page-section">
@@ -85,15 +85,15 @@
           <td>Услуга</td>
           <td>Цена</td>
         </tr>
-        <tr class="tariffs__service service">
+        <tr class="tariffs__service service standard-paragraph standard-paragraph--thin">
           <td class="service__name">Базовое размещение</td>
           <td class="service__price">Бесплатно</td>
         </tr>
-        <tr class="tariffs__service service">
+        <tr class="tariffs__service service standard-paragraph standard-paragraph--thin">
           <td class="service__name">Вывод на первых позициях</td>
           <td class="service__price">99 руб./мес</td>
         </tr>
-        <tr class="tariffs__service service">
+        <tr class="tariffs__service service standard-paragraph standard-paragraph--thin">
           <td class="service__name">Кастомный цвет карточки</td>
           <td class="service__price">от 20 коп./лайк</td>
         </tr>
@@ -132,11 +132,11 @@
     <section class="calls-to-action page-section">
       <h2 class="calls-to-action__heading subheading">Заинтересовались?</h2>
 
-      <p class="calls-to-action__call-to-register">
+      <p class="calls-to-action__call-to-register standard-paragraph standard-paragraph--thin">
         Зарегистрируйтесь,
         это быстро и бесплатно!
       </p>
-      <p class="calls-to-action__call-to-auth">
+      <p class="calls-to-action__call-to-auth standard-paragraph standard-paragraph--thin">
         Уже зарегистрированы? Тогда скорее <a href="#" class="calls-to-action__auth-link">авторизуйтесь</a>.
       </p>
 
@@ -148,7 +148,7 @@
       </form>
 
       <section class="calls-to-action__call-to-reach reach-us">
-        <p class="reach-us__message">
+        <p class="reach-us__message standard-paragraph standard-paragraph--thin">
           Остались вопросы?
           Мы с радостью на них ответим!
         </p>
