--- a/source/index.html
+++ b/source/index.html
@@ -54,7 +54,7 @@
           </div>
         </li>
       </ul>
-      <a href="#" class="directions__show-all button">Показать все</a>
+      <a href="#" class="directions__show-all button button--big">Показать все</a>
     </section>
 
     <section class="companions page-section">
@@ -168,7 +168,7 @@
         ул. Большая
         Конюшенная, 19/8
       </address>
-      <a href="#" class="locate-us__button button button--hollow">Проложить маршрут</a>
+      <a href="#" class="locate-us__button button button--big">Проложить маршрут</a>
       <img src="#" alt="" class="locate-us__map">
     </section>
 
