--- a/source/form.html
+++ b/source/form.html
@@ -67,7 +67,7 @@
           <label for="new-schedule__children-ok" class="new-schedule__children-ok-label">Можно с детьми</label>
 
           {{ datePicker("new-schedule") }}
-          <button type="submit" name="next-step" class="step__next button">Следующий шаг</button>
+          <button type="submit" name="next-step" class="step__next button button--big">Следующий шаг</button>
         </form>
       </section>
       <section class="new-schedule__step step step-route">
@@ -80,7 +80,7 @@
 
           {{ selectDirection(4) }}
           <button type="submit" name="add-direction">Добавить страну</button>
-          <button type="submit" name="next-step" class="step__next button">Следующий шаг</button>
+          <button type="submit" name="next-step" class="step__next button button--big">Следующий шаг</button>
           <button type="submit" name="previous-step" class="step__previous button button--text">На шаг назад</button>
         </form>
       </section>
@@ -102,7 +102,7 @@
                 placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться аритектурой и вот это все.</textarea>
             </li>
           </ul>
-          <button type="submit" class="step__finish button">Отправить</button>
+          <button type="submit" class="step__finish button button--big">Отправить</button>
           <button type="submit" name="previous-step" class="step__previous button button--text">На шаг назад</button>
         </form>
       </section>
