--- a/source/blocks/companion/companion.html
+++ b/source/blocks/companion/companion.html
@@ -1,7 +1,12 @@
-<li class="companions-list__item companion{% if featured %} companion--featured{% endif %}">
-  <img src="img/{{companion.avatar}}-mobile@1x.jpg" alt="Аватарка" class="companion__photo">
-  {{ places("featured-companion", companion.directions) }}
+<li class="companions-list__item companion">
+  <picture class="companion__photo">
+    <source media="(max-width: 767px)" srcset="img/{{companion.avatar}}-mobile@1x.jpg 1x, img/{{companion.avatar}}-mobile@2x.jpg 2x">
+    <source media="(min-width: 768px)" srcset="img/{{companion.avatar}}-tablet@1x.jpg 1x, img/{{companion.avatar}}-tablet@2x.jpg 2x">
+    <source media="(min-width: 1440px)" srcset="img/{{companion.avatar}}-desktop@1x.jpg 1x, img/{{companion.avatar}}-desktop@2x.jpg 2x">
+    <img src="img/photo-account-mobile@1x.jpg" alt="Аватарка" class="companion__photo">
+  </picture>
   <h3 class="companion__name companion__name--offline">{{companion.name}}</h3>
+  {{ places("companion", companion.directions) }}
   {{ transport("companion", companion.transport) }}
   {{ tags("companion", companion.tags) }}
   {{ level("companion", companion.level, 30, 3) }}
