--- a/source/index.html
+++ b/source/index.html
@@ -142,8 +142,8 @@
 
       <form action="https://echo.htmlacademy.ru" aria-label="Форма регистрации">
         <input type="text" class="calls-to-action__registration-email" aria-label="Электронная почта" name="email" placeholder="E-mail">
-        <button type="submit" class="calls-to-action__register">
-          <span class="visually-hidden">Зарегистрироваться</span>
+        <button type="submit" class="calls-to-action__register button button--big">
+          <span>Регистрация</span>
         </button>
       </form>
 
