--- a/source/index.html
+++ b/source/index.html
@@ -140,9 +140,9 @@
         Уже зарегистрированы? Тогда скорее <a href="#" class="calls-to-action__auth-link">авторизуйтесь</a>.
       </p>
 
-      <form action="https://echo.htmlacademy.ru" aria-label="Форма регистрации">
+      <form action="https://echo.htmlacademy.ru" aria-label="Форма регистрации" class="calls-to-action__registration-form">
         <input type="text" class="calls-to-action__registration-email" aria-label="Электронная почта" name="email" placeholder="E-mail">
-        <button type="submit" class="calls-to-action__register button button--big">
+        <button type="submit" class="calls-to-action__register button button--big" aria-label="Регистрация">
           <span>Регистрация</span>
         </button>
       </form>
