--- a/source/blocks/logo/logo.html
+++ b/source/blocks/logo/logo.html
@@ -1,6 +1,5 @@
 {% macro logo(parent, width, height, isInnerPage = false) %}
 <a class="{{parent}}__logo logo" {% if isInnerPage %}href="index.html" {% endif %}>
-  <img class="logo__image" src="img/logo-mobile-blue@1x.png" width="{{width}}" height="{{height}}"
-    alt="Сайт поиска попутчиков «Погнали»">
+  <span class="logo__image" role="img" aria-label="Сайт поиска попутчиков «Погнали»"></span>
 </a>
 {% endmacro %}
