--- a/source/blocks/page-footer/page-footer.html
+++ b/source/blocks/page-footer/page-footer.html
@@ -20,7 +20,7 @@
   <section class="page-footer__copyright copyright">
     <span class="copyright__text">Разработано</span>
     <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-      <img src="img/htmlacademy.svg" alt="Щит HTML Academy" width="27" height="34">
+      <img src="img/sprite.svg#htmlacademy" alt="Щит HTML Academy" width="27" height="34">
       <span class="visually-hidden">HTML Academy</span>
     </a>
   </section>
