--- a/source/index.html
+++ b/source/index.html
@@ -95,7 +95,7 @@
         </tr>
         <tr class="tariffs__service service standard-paragraph standard-paragraph--thin">
           <td class="service__name">Кастомный цвет карточки</td>
-          <td class="service__price">от 20 коп./лайк</td>
+          <td class="service__price">59 руб./мес</td>
         </tr>
       </table>
       <details>
