--- a/source/blocks/date-picker/date-picker.html
+++ b/source/blocks/date-picker/date-picker.html
@@ -1,15 +1,24 @@
 {% macro datePicker(parent, month, currenbuttonate, pickedStart, pickedLength) %}
+<section class="{{parent}}__month-picker month-picker">
+  <button type="submit" class="month-picker__previous">
+    <span class="visually-hidden">Предыдущий месяц</span>
+  </button>
+  <span class="month-picker__current">Март</span>
+  <button type="submit" class="month-picker__next">
+      <span class="visually-hidden">Следующий месяц</span>
+    </button>
+</section>
 <section class="{{parent}}__date-picker date-picker">
   <header class="date-picker__header">
-    <th class="date-picker__weekday date-picker__weekday--monday" aria-label="Понедельник">Пн</th>
-    <th class="date-picker__weekday date-picker__weekday--tuesday" aria-label="Вторник">Вт</th>
-    <th class="date-picker__weekday date-picker__weekday--wednesday" aria-label="Среда">Ср</th>
-    <th class="date-picker__weekday date-picker__weekday--thursday" aria-label="Четверг">Чт</th>
-    <th class="date-picker__weekday date-picker__weekday--friday" aria-label="Пятница">Пт</th>
-    <th class="date-picker__weekday date-picker__weekday--saturday date-picker__weekday--weekend" aria-label="Суббота">
-      Сб</th>
-    <th class="date-picker__weekday date-picker__weekday--sunday date-picker__weekday--weekend"
-      aria-label="Воскресенье">Вс</th>
+    <span class="date-picker__weekday date-picker__weekday--monday" aria-label="Понедельник">Пн</span>
+    <span class="date-picker__weekday date-picker__weekday--tuesday" aria-label="Вторник">Вт</span>
+    <span class="date-picker__weekday date-picker__weekday--wednesday" aria-label="Среда">Ср</span>
+    <span class="date-picker__weekday date-picker__weekday--thursday" aria-label="Четверг">Чт</span>
+    <span class="date-picker__weekday date-picker__weekday--friday" aria-label="Пятница">Пт</span>
+    <span class="date-picker__weekday date-picker__weekday--saturday date-picker__weekday--weekend" aria-label="Суббота">
+      Сб</span>
+    <span class="date-picker__weekday date-picker__weekday--sunday date-picker__weekday--weekend"
+      aria-label="Воскресенье">Вс</span>
   </header>
   <div class="date-picker__body">
     <button type="submit" class="date-picker__day date-picker__day--past" disabled>24</button>
@@ -33,6 +42,20 @@
     <button type="submit" class="date-picker__day">14</button>
     <button type="submit" class="date-picker__day">15</button>
     <button type="submit" class="date-picker__day">16</button>
+    <button type="submit" class="date-picker__day">17</button>
+    <button type="submit" class="date-picker__day">18</button>
+    <button type="submit" class="date-picker__day">19</button>
+    <button type="submit" class="date-picker__day">20</button>
+    <button type="submit" class="date-picker__day">21</button>
+    <button type="submit" class="date-picker__day">22</button>
+    <button type="submit" class="date-picker__day">23</button>
+    <button type="submit" class="date-picker__day">24</button>
+    <button type="submit" class="date-picker__day">25</button>
+    <button type="submit" class="date-picker__day">26</button>
+    <button type="submit" class="date-picker__day">27</button>
+    <button type="submit" class="date-picker__day">28</button>
+    <button type="submit" class="date-picker__day">29</button>
+    <button type="submit" class="date-picker__day">30</button>
   </div>
 </section>
 {% endmacro %}
