--- a/source/blocks/companion/companion.html
+++ b/source/blocks/companion/companion.html
@@ -1,5 +1,5 @@
 <li class="companions-list__item companion">
-  <picture class="companion__photo">
+  <picture class="companion__picture">
     <source media="(max-width: 767px)" srcset="img/{{companion.avatar}}-mobile@1x.jpg 1x, img/{{companion.avatar}}-mobile@2x.jpg 2x">
     <source media="(min-width: 768px)" srcset="img/{{companion.avatar}}-tablet@1x.jpg 1x, img/{{companion.avatar}}-tablet@2x.jpg 2x">
     <source media="(min-width: 1440px)" srcset="img/{{companion.avatar}}-desktop@1x.jpg 1x, img/{{companion.avatar}}-desktop@2x.jpg 2x">
