Флаги в направлениях на главной

--- a/source/index.html
+++ b/source/index.html
@@ -32,6 +32,7 @@
         <li class="direction-list__item direction">
           <img src="img/thailand-mobile@1x.jpg" alt="Острова посреди моря" class="direction__cover">
           <div class="direction__text-wrap">
+            <img src="img/sprite.svg#flag-thailand" alt="Флаг Тайланда" class="direction__flag" width="35" height="24">
             <h3 class="direction__title">Тайланд</h3>
             <span class="direction__travellers">18321</span>
             <span class="direction__slogan">Джугли зовут!</span>
@@ -40,6 +41,7 @@
         <li class="direction-list__item direction">
           <img src="img/france-mobile@1x.jpg" alt="Острова посреди моря" class="direction__cover">
           <div class="direction__text-wrap">
+            <img src="img/sprite.svg#flag-france" alt="Флаг Франции" class="direction__flag" width="35" height="24">
             <h3 class="direction__title">Франция</h3>
             <span class="direction__travellers">12518</span>
             <span class="direction__slogan">Трэ бьен, манифик!</span>
@@ -48,6 +50,7 @@
         <li class="direction-list__item direction">
           <img src="img/czech-mobile@1x.jpg" alt="Острова посреди моря" class="direction__cover">
           <div class="direction__text-wrap">
+            <img src="img/sprite.svg#flag-czech" alt="Флаг Чехии" class="direction__flag" width="35" height="24">
             <h3 class="direction__title">Чехия</h3>
             <span class="direction__travellers">5326</span>
             <span class="direction__slogan">Закоулки старой Европы</span>
