--- a/source/form.html
+++ b/source/form.html
@@ -106,12 +106,14 @@
           <ul class="step-fun__verbal-schedule verbal-schedule">
             <li class="verbal-schedule__step verbal-step">
               <h4 class="verbal-step__heading">Босния и герцеговина</h4>
-              <textarea name="verbal-step-1" id="" cols="30" rows="10" placeholder="План действий"></textarea>
+              <img src="img/sprite.svg#flag-bosnia" alt="Флаг Чехии" class="verbal-step__flag" width="35" height="24">
+              <textarea name="verbal-step-1" id="" cols="30" rows="10" placeholder="План действий" class="verbal-step__description"></textarea>
             </li>
             <li class="verbal-schedule__step verbal-step">
               <h4 class="verbal-step__heading">Чехословакия</h4>
+              <img src="img/sprite.svg#flag-czech" alt="Флаг Чехии" class="verbal-step__flag" width="35" height="24">
               <textarea name="verbal-step-2" id="" cols="30" rows="10"
-                placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться аритектурой и вот это все.</textarea>
+                placeholder="План действий" class="verbal-step__description">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
             </li>
           </ul>
           <button type="submit" class="step__finish button button--big">Отправить</button>
