--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,7 +20,61 @@
   {% include "blocks/page-header/page-header.html" %}
 
   <main class="page-main">
+    <section class="filter-countries">
+        <h2 class="filter-countries__heading">Фильтрация по странам</h2>
 
+        <div class="filter-countries__main">
+          <a href="#" class="filter-countries__land filter-countries__land--active">Европа</a>
+          <a href="#" class="filter-countries__land">Азия</a>
+          <a href="#" class="filter-countries__land">Америка</a>
+          <a href="#" class="filter-countries__land">Острова</a>
+
+          <div class="filter-countries__alphabet">
+            <a href="#" class="filter-countries__letter filter-countries__letter--active">А</a>
+            <a href="#" class="filter-countries__letter">Б</a>
+            <a href="#" class="filter-countries__letter">В</a>
+            <a href="#" class="filter-countries__letter">Г</a>
+            <a href="#" class="filter-countries__letter">Д</a>
+            <a href="#" class="filter-countries__letter">Е</a>
+            <a href="#" class="filter-countries__letter">Ё</a>
+            <a href="#" class="filter-countries__letter">Ж</a>
+            <a href="#" class="filter-countries__letter">З</a>
+            <a href="#" class="filter-countries__letter">И</a>
+            <a href="#" class="filter-countries__letter">Й</a>
+            <a href="#" class="filter-countries__letter">К</a>
+            <a href="#" class="filter-countries__letter">Л</a>
+            <a href="#" class="filter-countries__letter">М</a>
+            <a href="#" class="filter-countries__letter">Н</a>
+            <a href="#" class="filter-countries__letter">О</a>
+            <a href="#" class="filter-countries__letter">П</a>
+            <a href="#" class="filter-countries__letter">Р</a>
+            <a href="#" class="filter-countries__letter">С</a>
+            <a href="#" class="filter-countries__letter">Т</a>
+            <a href="#" class="filter-countries__letter">У</a>
+            <a href="#" class="filter-countries__letter">Ф</a>
+            <a href="#" class="filter-countries__letter">Х</a>
+            <a href="#" class="filter-countries__letter">Ц</a>
+            <a href="#" class="filter-countries__letter">Ч</a>
+            <a href="#" class="filter-countries__letter">Ш</a>
+            <a href="#" class="filter-countries__letter">Щ</a>
+            <a href="#" class="filter-countries__letter">Э</a>
+            <a href="#" class="filter-countries__letter">Ю</a>
+            <a href="#" class="filter-countries__letter">Я</a>
+          </div>
+
+          <p>
+              Афганистан
+              Албания
+              Алгерия
+              Андорра
+              Аргентина
+              Армения
+              Австралия
+              Австрия
+              Азербайджан
+          </p>
+        </div>
+    </section>
     <section class="filter-companions">
       <h2 class="filter-companions__heading">Подберите идеального попутчика</h2>
 
