Перестроение списка стран в фильтре

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,59 +21,277 @@
 
   <main class="page-main">
     <section class="filter-countries">
-        <h2 class="filter-countries__heading">Фильтрация по странам</h2>
+      <h2 class="filter-countries__heading">Фильтрация по странам</h2>
 
-        <div class="filter-countries__main">
-          <a href="#" class="filter-countries__land filter-countries__land--active">Европа</a>
-          <a href="#" class="filter-countries__land">Азия</a>
-          <a href="#" class="filter-countries__land">Америка</a>
-          <a href="#" class="filter-countries__land">Острова</a>
+      <div class="filter-countries__main">
+        <a href="#" class="filter-countries__land filter-countries__land--active">Европа</a>
+        <a href="#" class="filter-countries__land">Азия</a>
+        <a href="#" class="filter-countries__land">Америка</a>
+        <a href="#" class="filter-countries__land">Острова</a>
 
-          <div class="filter-countries__alphabet">
-            <a href="#" class="filter-countries__letter filter-countries__letter--active">А</a>
-            <a href="#" class="filter-countries__letter">Б</a>
-            <a href="#" class="filter-countries__letter">В</a>
-            <a href="#" class="filter-countries__letter">Г</a>
-            <a href="#" class="filter-countries__letter">Д</a>
-            <a href="#" class="filter-countries__letter">Е</a>
-            <a href="#" class="filter-countries__letter">Ё</a>
-            <a href="#" class="filter-countries__letter">Ж</a>
-            <a href="#" class="filter-countries__letter">З</a>
-            <a href="#" class="filter-countries__letter">И</a>
-            <a href="#" class="filter-countries__letter">Й</a>
-            <a href="#" class="filter-countries__letter">К</a>
-            <a href="#" class="filter-countries__letter">Л</a>
-            <a href="#" class="filter-countries__letter">М</a>
-            <a href="#" class="filter-countries__letter">Н</a>
-            <a href="#" class="filter-countries__letter">О</a>
-            <a href="#" class="filter-countries__letter">П</a>
-            <a href="#" class="filter-countries__letter">Р</a>
-            <a href="#" class="filter-countries__letter">С</a>
-            <a href="#" class="filter-countries__letter">Т</a>
-            <a href="#" class="filter-countries__letter">У</a>
-            <a href="#" class="filter-countries__letter">Ф</a>
-            <a href="#" class="filter-countries__letter">Х</a>
-            <a href="#" class="filter-countries__letter">Ц</a>
-            <a href="#" class="filter-countries__letter">Ч</a>
-            <a href="#" class="filter-countries__letter">Ш</a>
-            <a href="#" class="filter-countries__letter">Щ</a>
-            <a href="#" class="filter-countries__letter">Э</a>
-            <a href="#" class="filter-countries__letter">Ю</a>
-            <a href="#" class="filter-countries__letter">Я</a>
-          </div>
-
-          <p>
-              Афганистан
-              Албания
-              Алгерия
-              Андорра
-              Аргентина
-              Армения
-              Австралия
-              Австрия
-              Азербайджан
+        <div class="filter-countries__alphabet">
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-1 filter-countries__letter--row-1 filter-countries__letter--active">А</a>
+          <p class="filter-countries__list filter-countries__list--a">
+            Австралия<br>
+            Австрия<br>
+            Азербайджан<br>
+            Албания<br>
+            Алжир<br>
+            Ангола<br>
+            Андорра<br>
+            Антигуа и Барбуда<br>
+            Аргентина<br>
+            Армения<br>
+            Афганистан
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-2 filter-countries__letter--row-1">Б</a>
+          <p class="filter-countries__list">
+            Багамские Острова<br>
+            Бангладеш<br>
+            Барбадос<br>
+            Бахрейн<br>
+            Белоруссия<br>
+            Белиз<br>
+            Бельгия<br>
+            Бенин<br>
+            Болгария<br>
+            Боливия<br>
+            Босния и Герцеговина<br>
+            Ботсвана<br>
+            Бразилия<br>
+            Бруней<br>
+            Буркина-Фасо<br>
+            Бурунди<br>
+            Бутан
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-3 filter-countries__letter--row-1">В</a>
+          <p class="filter-countries__list">
+            Вануату<br>
+            Великобритания<br>
+            Венгрия<br>
+            Венесуэла<br>
+            Восточный Тимор<br>
+            Вьетнам
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-4 filter-countries__letter--row-1">Г</a>
+          <p class="filter-countries__list">
+            Габон<br>
+            Гаити<br>
+            Гайана<br>
+            Гамбия<br>
+            Гана<br>
+            Гватемала<br>
+            Гвинея<br>
+            Гвинея-Бисау<br>
+            Германия<br>
+            Гондурас<br>
+            Гренада<br>
+            Греция<br>
+            Грузия
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-5 filter-countries__letter--row-1">Д</a>
+          <p class="filter-countries__list">
+            Дания<br>
+            Джибути<br>
+            Доминика<br>
+            Доминикана
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-1 filter-countries__letter--row-1">Е</a>
+          <p class="filter-countries__list">
+            Египет
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--empty">Ё</a>
+          <a href="#" class="filter-countries__letter filter-countries__letter--empty">Ж</a>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-2 filter-countries__letter--row-2">З</a>
+          <p class="filter-countries__list">
+            Замбия<br>
+            Зимбабве
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-3 filter-countries__letter--row-2">И</a>
+          <p class="filter-countries__list">
+            Израиль<br>
+            Индия<br>
+            Индонезия<br>
+            Иордания<br>
+            Ирак<br>
+            Иран<br>
+            Ирландия<br>
+            Исландия<br>
+            Испания<br>
+            Италия
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--empty">Й</a>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-4 filter-countries__letter--row-2">К</a>
+          <p class="filter-countries__list">
+            Кабо-Верде<br>
+            Казахстан<br>
+            Камбоджа<br>
+            Камерун<br>
+            Канада<br>
+            Катар<br>
+            Кения<br>
+            Кипр<br>
+            Киргизия<br>
+            Кирибати<br>
+            Китай<br>
+            Колумбия<br>
+            Коморы<br>
+            Конго<br>
+            КНДР<br>
+            Республика Корея<br>
+            Коста-Рика<br>
+            Кот-д’Ивуар<br>
+            Куба<br>
+            Кувейт
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-5 filter-countries__letter--row-2">Л</a>
+          <p class="filter-countries__list">
+            Лаос<br>
+            Латвия<br>
+            Лесото<br>
+            Либерия<br>
+            Ливан<br>
+            Ливия<br>
+            Литва<br>
+            Лихтенштейн<br>
+            Люксембург
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-1 filter-countries__letter--row-2">М</a>
+          <p class="filter-countries__list">
+            Маврикий<br>
+            Мавритания<br>
+            Мадагаскар<br>
+            Малави<br>
+            Малайзия<br>
+            Мали<br>
+            Мальдивы<br>
+            Мальта<br>
+            Марокко<br>
+            Маршалловы Острова<br>
+            Мексика<br>
+            Мозамбик<br>
+            Молдавия<br>
+            Монако<br>
+            Монголия<br>
+            Мьянма
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-2 filter-countries__letter--row-2">Н</a>
+          <p class="filter-countries__list">
+            Намибия<br>
+            Науру<br>
+            Непал<br>
+            Нигер<br>
+            Нигерия<br>
+            Нидерланды<br>
+            Никарагуа<br>
+            Новая Зеландия<br>
+            Норвегия
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-3 filter-countries__letter--row-3">О</a>
+          <p class="filter-countries__list">
+            ОАЭ<br>
+            Оман
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-4 filter-countries__letter--row-3">П</a>
+          <p class="filter-countries__list">
+            Пакистан<br>
+            Палау<br>
+            Панама<br>
+            Папуа — Новая Гвинея<br>
+            Парагвай<br>
+            Перу<br>
+            Польша<br>
+            Португалия
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-5">Р</a>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-1 filter-countries__letter--row-3">С</a>
+          <p class="filter-countries__list">
+            Сальвадор<br>
+            Самоа<br>
+            Сан-Марино<br>
+            Сан-Томе и Принсипи<br>
+            Саудовская Аравия<br>
+            Северная Македония<br>
+            Сейшелы<br>
+            Сенегал<br>
+            Сент-Люсия<br>
+            Сербия<br>
+            Сингапур<br>
+            Сирия<br>
+            Словакия<br>
+            Словения<br>
+            США<br>
+            Сомали<br>
+            Судан<br>
+            Суринам<br>
+            Сьерра-Леоне
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-2 filter-countries__letter--row-3">Т</a>
+          <p class="filter-countries__list">
+            Таджикистан<br>
+            Таиланд<br>
+            Танзания<br>
+            Того<br>
+            Тонга<br>
+            Тринидад и Тобаго<br>
+            Тувалу<br>
+            Тунис<br>
+            Туркмения<br>
+            Турция
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-3 filter-countries__letter--row-3">У</a>
+          <p class="filter-countries__list">
+            Уганда<br>
+            Узбекистан<br>
+            Украина<br>
+            Уругвай
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-4 filter-countries__letter--row-3">Ф</a>
+          <p class="filter-countries__list">
+            Фиджи<br>
+            Филиппины<br>
+            Финляндия<br>
+            Франция
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-5 filter-countries__letter--row-4">Х</a>
+          <p class="filter-countries__list">
+            Хорватия
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--empty">Ц</a>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-1 filter-countries__letter--row-4">Ч</a>
+          <p class="filter-countries__list">
+            Чад<br>
+            Черногория<br>
+            Чехия<br>
+            Чили
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-2 filter-countries__letter--row-4">Ш</a>
+          <p class="filter-countries__list">
+            Швейцария<br>
+            Швеция<br>
+            Шри-Ланка
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--empty">Щ</a>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-3 filter-countries__letter--row-4">Э</a>
+          <p class="filter-countries__list">
+            Эквадор<br>
+            Эритрея<br>
+            Эсватини<br>
+            Эстония<br>
+            Эфиопия
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-4 filter-countries__letter--row-4">Ю</a>
+          <p class="filter-countries__list">
+            ЮАР<br>
+            Южный Судан
+          </p>
+          <a href="#" class="filter-countries__letter filter-countries__letter--col-5 filter-countries__letter--row-4">Я</a>
+          <p class="filter-countries__list">
+            Ямайка<br>
+            Япония
           </p>
         </div>
+      </div>
     </section>
     <section class="filter-companions">
       <h2 class="filter-companions__heading">Подберите идеального попутчика</h2>
