--- a/source/blocks/featured-companion/featured-companion.html
+++ b/source/blocks/featured-companion/featured-companion.html
@@ -1,6 +1,6 @@
 <li class="companions-list__item featured-companion">
   <img src="img/{{companion.avatar}}-desktop@1x.jpg" alt="Аватарка" class="companion__photo">
-  {{ places("featured-companion", companion.directions, true) }}
+  {{ places("featured-companion", companion.directions) }}
   <h3 class="featured-companion__name featured-companion__name--offline">
     <span class="companion__first-name">{{companion.firstName}}</span>
     <span class="companion__lastName">{{companion.lastName}}</span>
