--- a/source/catalog.html
+++ b/source/catalog.html
@@ -290,6 +290,11 @@
             Ямайка<br>
             Япония
           </p>
+          <div class="column-break column-break--1"></div>
+          <div class="column-break column-break--2"></div>
+          <div class="column-break column-break--3"></div>
+          <div class="column-break column-break--4"></div>
+          <div class="column-break column-break--5"></div>
         </div>
       </div>
     </section>
