--- a/source/catalog.html
+++ b/source/catalog.html
@@ -374,8 +374,12 @@
 
     <div class="controls">
       <a href="#" class="controls__more">Показать еще</a>
-      <a href="#" class="controls__previous button button--white">Предыдущая страница</a>
-      <a href="#" class="controls__next button button--white">Следующая страница</a>
+      <a href="#" class="controls__button controls__button--previous">
+        <span class="visually-hidden">Предыдущая страница</span>
+      </a>
+      <a href="#" class="controls__button controls__button--next ">
+        <span class="visually-hidden">Следующая страница</span>
+      </a>
     </div>
   </main>
   {% include "blocks/page-footer/page-footer.html" %}
