--- a/source/blocks/companion/companion.html
+++ b/source/blocks/companion/companion.html
@@ -15,9 +15,16 @@
   <button type="button" class="companion__like{% if companion.isLiked %} companion__like--avtive{% endif %}"></button>
   <span class="companion__likes-amount">{{companion.likesAmount}}</span>
   <section class="companion__places places">
-    <h4 class="places__heading">Хочет посетить</h4>
+    <h4 class="places__heading">хочет посетить:</h4>
     {{ places("companion", companion.directions) }}
-  </section>   
-  {{ transport("companion", companion.transport) }}
-  {{ level("companion", companion.level, 30, 3) }}
+  </section>
+  <section class="companion__transport">
+    <h4 class="transport__heading">транспорт:</h4>    
+    {{ transport("companion", companion.transport) }}
+  </section>
+  <section class="companion__level">
+      <h4 class="level__heading">левел:</h4>    
+      {{ level("companion", companion.level, 30, 3) }}
+  </section>
+  
 </li>
